<resources>
    <string name="app_name">Santha Agency</string>

    <string name="home">Dashboard</string>
    <string name="invent">Inventory</string>
    <string name="client">Client</string>
    <string name="invoice">Invoice</string>
    <string name="orders">Order</string>
    <string name="happy">Happy</string>
    <string name="room">Room</string>
    <string name="restaurant">Food</string>
    <string name="shop">Shop</string>
    <string name="photos">Pics</string>
    <string name="call">Call</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inclusive">Inclusive</string>
    <string name="exclusive">Exclusive</string>
    <string name="product_name">Product name</string>
    <string name="quantity">Quantity</string>
    <string name="ml">.ml</string>
    <string name="sale_rate">Sale rate</string>
    <string name="gst_per_unit">GST per unit</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="cess">CESS</string>
    <string name="_1_5">1.5</string>
    <string name="_2_5">2.5</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_14">14</string>
    <string name="final_rate">Final rate</string>
    <string name="add_product">Add Product</string>
    <string name="phone">Phone number</string>
    <string name="register">Register</string>

    <string name="date_format">yyyy-MM-dd HH:mm</string>
    <string name="short_format">yyyy_MM_dd</string>
    <string name="inv_format">dd-MM-yyyy</string>
    <string name="pur_rate">Purchase Rate</string>
    <string name="hsn_code">HSN Code</string>

</resources>