<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentcontainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view_linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bottom_navigation_view_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@drawable/ic_dashboard"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/home" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@drawable/ic_invent"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/invent" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_profile_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@drawable/ic_receipt"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/invoice" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@drawable/ic_order"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/orders" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/l_item_profile"
            android:layout_width="wrap_content"
            app:bt_icon="@drawable/ic_client"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_shape="@drawable/transition_background_drawable_home"
            app:bt_title="@string/client" />
    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</androidx.constraintlayout.widget.ConstraintLayout>