<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            android:text="Edit Product Details"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--        <com.makeramen.roundedimageview.RoundedImageView-->
<!--            android:id="@+id/product_image"-->
<!--            android:layout_width="108dp"-->
<!--            android:layout_height="108dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_margin="20dp"-->
<!--            android:onClick="add_image"-->
<!--            android:src="@drawable/photo__"-->
<!--            app:riv_corner_radius="10dp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/product_name"
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edx_bg"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_hsn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edx_bg"
                android:hint="@string/hsn_code"
                android:importantForAutofill="no"
                android:padding="10dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_pur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edx_bg"
                android:hint="@string/pur_rate"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textSize="16sp"  />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edx_bg"
                android:hint="@string/sale_rate"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textSize="16sp"  />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edx_bg"
                android:hint="Units"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="16sp"  />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_phone"
            style="@style/textMini"
            android:layout_marginStart="20dp"
            android:text="@string/gst_per_unit" />

        <RadioGroup
            android:id="@+id/tax_ex_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_default"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/inclusive" />

            <RadioButton
                android:id="@+id/radio_ex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/exclusive" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cgst_txt"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edx_bg"
                    android:digits="0123456789"
                    android:hint="@string/cgst"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sgst_txt"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edx_bg"
                    android:digits="0123456789"
                    android:hint="@string/sgst"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_marginTop="5dp"
                android:layout_width="2dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cess_txt"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edx_bg"
                    android:digits="0123456789"
                    android:hint="@string/cess"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

<!--        <RadioGroup-->
<!--            android:id="@+id/radioGroup_tax"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:orientation="horizontal">-->

<!--            <RadioButton-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:buttonTint="@color/colorAccent"-->
<!--                android:text="@string/_1_5" />-->

<!--            <RadioButton-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:buttonTint="@color/colorAccent"-->
<!--                android:text="@string/_2_5" />-->

<!--            <RadioButton-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:buttonTint="@color/colorAccent"-->
<!--                android:text="@string/_6" />-->

<!--            <RadioButton-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:buttonTint="@color/colorAccent"-->
<!--                android:text="@string/_9" />-->

<!--            <RadioButton-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:buttonTint="@color/colorAccent"-->
<!--                android:text="@string/_14" />-->
<!--        </RadioGroup>-->

<!--        <EditText-->
<!--            android:id="@+id/final_rate"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:background="@drawable/edx_bg"-->
<!--            android:digits="0123456789"-->
<!--            android:enabled="false"-->
<!--            android:hint="@string/final_rate"-->
<!--            android:importantForAutofill="no"-->
<!--            android:inputType="number"-->
<!--            android:padding="10dp"-->
<!--            android:textSize="16sp" />-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_bg"
            android:onClick="add_product"
            android:padding="10dp"
            android:text="Edit Product"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>